[gd_scene load_steps=4 format=3 uid="uid://347nlwvipmeg"]

[ext_resource type="Script" path="res://EffectSystem/bullet_hit.gd" id="1_4vy3e"]
[ext_resource type="Texture2D" uid="uid://bypowv0yu0q8t" path="res://Textures/Raw/Bullet.JPG" id="2_lrb5u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fx8ch"]
blend_mode = 1
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(2, 2, 2, 1)
albedo_texture = ExtResource("2_lrb5u")

[node name="bullet_hit" type="Node3D"]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
script = ExtResource("1_4vy3e")

[node name="sprite_1" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.16, 0, 0.16)
material_override = SubResource("StandardMaterial3D_fx8ch")
gi_mode = 0
texture = ExtResource("2_lrb5u")
hframes = 4
vframes = 4
frame = 12

[node name="sprite_2" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -0.16, 0, -0.16)
material_override = SubResource("StandardMaterial3D_fx8ch")
gi_mode = 0
texture = ExtResource("2_lrb5u")
hframes = 4
vframes = 4
frame = 12

[node name="sprite_3" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0.16, 0, 0.16)
material_override = SubResource("StandardMaterial3D_fx8ch")
gi_mode = 0
texture = ExtResource("2_lrb5u")
hframes = 4
vframes = 4
frame = 12

[node name="sprite_4" type="Sprite3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.16, 0, -0.16)
material_override = SubResource("StandardMaterial3D_fx8ch")
gi_mode = 0
texture = ExtResource("2_lrb5u")
hframes = 4
vframes = 4
frame = 12

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
